add model predictor

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
                     <div class="col-md-6 mb-3">
                         <label for="insured_sex">Insured Sex</label>
                         <select class="form-control" id="insured_sex" name="insured_sex" required>
-                        <option value="" disabled selected>Select Sex</option>
+                        <option value="" disabled selected>Select Insured Sex</option>
                         <option>MALE</option>
                         <option>FEMALE</option>
                         </select>
@@ -46,7 +46,7 @@
                     <div class="col-md-6 mb-3">
                         <label for="insured_education_level">Insured Education Level</label>
                         <select class="form-control" id="insured_education_level" name="insured_education_level" required>
-                        <option value="" disabled selected>Select Education Level</option>
+                        <option value="" disabled selected>Select Insured Education Level</option>
                         <option>MD</option>
                         <option>PhD</option>
                         <option>Associate</option>
@@ -108,9 +108,9 @@
                     </div>
 
                     <div class="col-md-6 mb-3">
-                        <label for="insured_relationship">Relationship</label>
+                        <label for="insured_relationship">Insured Relationship</label>
                         <select class="form-control" id="insured_relationship" name="insured_relationship" required>
-                        <option value="" disabled selected>Select Relationship</option>
+                        <option value="" disabled selected>Select Insured Relationship</option>
                         <option>husband</option>
                         <option>other-relative</option>
                         <option>own-child</option>
@@ -149,7 +149,7 @@
                     <div class="col-md-6 mb-3">
                         <label for="incident_severity">Incident Severity</label>
                         <select class="form-control" id="incident_severity" name="incident_severity" required>
-                        <option value="" disabled selected>Select Severity</option>
+                        <option value="" disabled selected>Select Incident Severity</option>
                         <option>Major Damage</option>
                         <option>Minor Damage</option>
                         <option>Total Loss</option>
@@ -160,7 +160,7 @@
                     <div class="col-md-6 mb-3">
                         <label for="authorities_contacted">Authorities Contacted</label>
                         <select class="form-control" id="authorities_contacted" name="authorities_contacted" required>
-                        <option value="" disabled selected>Select Authority</option>
+                        <option value="" disabled selected>Select Authorities Contacted</option>
                         <option>Police</option>
                         <option>Fire</option>
                         <option>Other</option>
@@ -173,7 +173,7 @@
                     <div class="col-md-6 mb-3">
                         <label for="incident_state">Incident State</label>
                         <select class="form-control" id="incident_state" name="incident_state" required>
-                        <option value="" disabled selected>Select State</option>
+                        <option value="" disabled selected>Select Incident State</option>
                         <option>SC</option>
                         <option>VA</option>
                         <option>NY</option>
@@ -187,7 +187,7 @@
                     <div class="col-md-6 mb-3">
                         <label for="incident_city">Incident City</label>
                         <select class="form-control" id="incident_city" name="incident_city" required>
-                        <option value="" disabled selected>Select City</option>
+                        <option value="" disabled selected>Select Incident City</option>
                         <option>Columbus</option>
                         <option>Riverwood</option>
                         <option>Arlington</option>
@@ -422,9 +422,9 @@
                           </select>
                         </div>
                         <div class="col-md-6 mb-3">
-                          <label for="bodily_injuries">Bodly Injuries</label>
+                          <label for="bodily_injuries">Bodily Injuries</label>
                           <select class="form-control" id="bodily_injuries" name="bodily_injuries" required>
-                              <option value="" disabled selected>Bodly Injuries</option>
+                              <option value="" disabled selected>Bodily Injuries</option>
                               <option>0</option>
                               <option>1</option>
                               <option>2</option>
