--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,50 +1,87 @@
-/* Centering the navbar brand */
 .navbar-light .navbar-brand {
-    color: rgba(0, 0, 0, .9);
+    color: rgba(0, 0,0, 0.9);
+}
+
+
+.navbar-light .navbar-brand {
     margin-left: auto;
     margin-right: auto;
 }
 
-/* Body styling */
 body {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
 }
 
-/* Form container styling */
-.container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
+.formBox {
+    margin-top: 50px;
+    padding: 50px;
 }
 
-/* Legend styling */
-legend {
+h1 {
+    margin: 0;
+    padding: 0;
     text-align: center;
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 20px;
+    margin-bottom: 50px !important;
+    text-transform: uppercase;
+    font-size: 48px;
 }
 
-/* Grid container for two-column layout */
-.grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr; /* Two equal columns */
-    gap: 20px; /* Space between grid items */
+.h2 {
+    text-align: center;
+  }
+
+.inputBox {
+    position: relative;
+    box-sizing: border-box;
+    margin-bottom: 40px;
 }
 
-/* Styling for form control */
-.form-control {
-    font-size: 18px;
-}
-
-/* Full width submit button spanning both columns */
-input[type="submit"] {
-    grid-column: span 2;
+.button {
+    width: 100%;
     background: #00bcd4;
     color: #fff;
+    border-radius: 0;
     border: none;
+    outline: none;
+    height: 50px;
+    font-size: 24px;
+}
+
+.input {
+    position: relative;
+    width: 100%;
+    height: 50px;
+    background: transparent;
+    border: none;
+    outline: none;
+    font-size: 24px;
+    border-bottom: 2px solid rgba(0, 0, 0, .5);
+}
+
+.inputText {
+    position: absolute;
+    line-height: 50px;
+    font-size: 24px;
+    transition: .5s;
+    opacity: 0.5;
+}
+
+.focus .inputText {
+    transform: translateY(-30px);
+    font-size: 18px;
+    opacity: 1;
+    color: #00bcd4;
+}
+
+.btn_train {
+    width: 100%;
+    background: red;
+    color: #fff;
+    border-radius: 0;
+    border: none;
+    outline: none;
     height: 50px;
     font-size: 24px;
 }
